# gpgobj-rs

gpgobj/: Cargo.toml
gpgobj/src/: base.rs  complex.rs  consts.rs  crc.rs  errors.rs  gpgbase.rs  gpgimpl.rs  lib.rs  logger.rs  strop.rs
gpgobj_codegen/: Cargo.toml
gpgobj_codegen/src/: errors.rs  lib.rs  logger.rs  randv.rs
