[package]
name = "gpgobj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "^1.4.0"
chrono = "^0.4.0"
num-bigint = "^0.4.3"
num-traits = "^0.2.5"
gpgobj_codegen = { path = "../gpgobj_codegen"}